排查结构问题并解决